--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,8 @@
 name: Deploy to EC2 🚀
-on:
+'on':
   push:
     branches:
-      - "main" # This triggers the workflow on push to any branch
+      - main # This triggers the workflow on push to any branch
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -43,9 +43,17 @@ jobs:
       - name: Clean up SSH key 🚀
         if: always()
         run: rm -f ~/.ssh/id_rsa
-
-
-
-
-
-
+Resources:
+  EnvironmentEC2:
+    Type: AWS::Cloud9::EnvironmentEC2
+    Properties:
+      ImageId: <String>
+      InstanceType: <String>
+  Environment:
+    Type: AWS::ElasticBeanstalk::Environment
+    Properties:
+      ApplicationName: <String>
+  ConfigurationTemplate:
+    Type: AWS::ElasticBeanstalk::ConfigurationTemplate
+    Properties:
+      ApplicationName: <String>
